--- a/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/account/login.html
+++ b/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/account/login.html
@@ -4,27 +4,114 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" charset="utf-8">
     <title>Rowdy Story</title>
-    <style>
-        section {
-            margin-top: 120px;
-        }
-    </style>
 </head>
 <body>
     <div th:replace="common/header :: header"></div>
 
-    <section class="container section">
-        <div class="row">
-            <div class="col-12">
-                <div class="text-center">
-                    <h2>소셜 로그인</h2>
-                    <a href="javascript:;" class="btn_social" data-social="google"><img th:src="@{/images/google.png}" width="40px" height="40px"/></a>
-                    <a href="javascript:;" class="btn_social" data-social="facebook"><img th:src="@{/images/facebook.png}" width="40px" height="40px"/></a>
-                    <a href="javascript:;" class="btn_social" data-social="kakao"><img th:src="@{/images/kakao.png}" width="40px" height="40px"/></a>
-                    <a href="javascript:;" class="btn_social" data-social="naver"><img th:src="@{/images/naver.png}" width="40px" height="40px"/></a>
+    <section class="container" style="margin-top: 120px;">
+        <form role="form" th:action="@{/account/login}" th:object="${userLoginRequest}" method="post">
+
+            <div class="row">
+                <!--존재하지 않는 이메일 오류-->
+                <div class="col-8 mx-auto mt-5 alert alert-danger alert-dismissible fade show" role="alert" th:if="${#fields.hasErrors('email')}">
+                    <div th:errors="*{email}">error message</div>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close" onclick="location.href = '/account/login'">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
+
+                <!--일치하지 않는 비밀번호 오류-->
+                <div class="col-8 mx-auto mt-5 alert alert-danger alert-dismissible fade show" role="alert" th:if="${#fields.hasErrors('password')}">
+                    <div th:errors="*{password}">error message</div>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close" onclick="location.href = '/account/login'">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+
+                <!--소셜 계정으로 일반 로그인 시도 오류-->
+                <div class="col-8 mx-auto mt-5 alert alert-danger alert-dismissible fade show" role="alert" th:if="${#fields.hasErrors('social')}">
+                    <div th:errors="*{social}">error message</div>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close" onclick="location.href = '/account/login'">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+
+                <div class="col-8 mx-auto my-5 py-4 border">
+                    <div class="row">
+                        <div class="col-6">
+                            <h5 class="ml-3 text-left"><strong>로그인</strong></h5>
+                        </div>
+                        <div class="col-6">
+                            <div class="mr-3 text-right">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item"><a class="text-dark" href="/account/findPassword"><strong>비밀번호 찾기</strong></a></li>
+                                    <li class="list-inline-item"><a class="text-dark" href="/account/signUp"><strong>회원가입</strong></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="form-row col-12">
+                                <label for="inputEmail"><strong>이메일 주소</strong></label>
+                                <div class="input-group">
+                                    <input type="text" th:field="*{email}" class="form-control" id="inputEmail" autocomplete="off" placeholder="이메일 주소를 입력해주세요.">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="addonEmail">
+                                            <svg class="bi bi-envelope" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                              <path fill-rule="evenodd" d="M14 3H2a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM2 2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H2z"/>
+                                              <path d="M.05 3.555C.017 3.698 0 3.847 0 4v.697l5.803 3.546L0 11.801V12c0 .306.069.596.192.856l6.57-4.027L8 9.586l1.239-.757 6.57 4.027c.122-.26.191-.55.191-.856v-.2l-5.803-3.557L16 4.697V4c0-.153-.017-.302-.05-.445L8 8.414.05 3.555z"/>
+                                            </svg>
+                                        </span>
+                                    </div>
+                                    <div id="alertEmail"></div>
+                                </div>
+                            </div>
+
+                            <br>
+
+                            <div class="form-row col-12">
+                                <label for="inputPassword"><strong>비밀번호</strong></label>
+                                <div class="input-group mb-4">
+                                    <input type="password" th:field="*{password}" class="form-control" id="inputPassword" autocomplete="off" placeholder="비밀번호는 최소 6자 이상입니다.">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="addonPassword">
+                                            <svg class="bi bi-lock" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd" d="M11.5 8h-7a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V9a1 1 0 0 0-1-1zm-7-1a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h7a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-7zm0-3a3.5 3.5 0 1 1 7 0v3h-1V4a2.5 2.5 0 0 0-5 0v3h-1V4z"/>
+                                            </svg>
+                                        </span>
+                                    </div>
+                                    <div id="alertPassword"></div>
+                                </div>
+                            </div>
+
+                            <div class="form-group form-check ml-2">
+                                <input type="checkbox" class="form-check-input" id="check">
+                                <label class="form-check-label" for="check">로그인 상태 유지</label>
+                            </div>
+                            <button type="submit" class="btn btn-info float-right mr-3" id="loginBtn" disabled>로그인</button>
+                        </div>
+                    </div>
+                    <hr>
+
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="text-center">
+                                <a href="javascript:;" class="btn_social" data-social="google"><img th:src="@{/images/social/google.png}" width="40px" height="40px"/></a>
+                                <a href="javascript:;" class="btn_social" data-social="facebook"><img th:src="@{/images/social/facebook.png}" width="40px" height="40px"/></a>
+                                <a href="javascript:;" class="btn_social" data-social="kakao"><img th:src="@{/images/social/kakao.png}" width="40px" height="40px"/></a>
+                                <a href="javascript:;" class="btn_social" data-social="naver"><img th:src="@{/images/social/naver.png}" width="40px" height="40px"/></a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
             </div>
-        </div>
+
+        </form>
     </section>
 
     <div th:replace="common/footer :: footer"></div>
