--- a/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/common/header.html
+++ b/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/common/header.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" th:href="@{/bootstrap-4.5.3/css/bootstrap.min.css}" />
 
     <div class="container topHeader">
+
+<!--        <div class="row" th:if="${#request.isUserInRole('ADMIN')}">-->
+<!--            <h2>This will only be displayed if authenticated user has role ROLE_ADMIN.</h2>-->
+<!--        </div>-->
+
+<!--        <div class="row" th:if="${#request.isUserInRole('USER')}">-->
+<!--            <h2>This will only be displayed if authenticated user has role ROLE_USER.</h2>-->
+<!--        </div>-->
+
         <div class="row">
             <div class="col-12">
                 <div class="text-right">
@@ -19,12 +28,22 @@
                             <div class="pop" data-toggle="popover" title="" data-placement="bottom"
                                     data-content="
                                         <ul class='list-group'>
+                                            <a href='/#' class='list-group-item list-group-item-action text-center'>회원 관리</a>
+                                            <a href='/#' class='list-group-item list-group-item-action text-center'>게시물 관리</a>
+                                            <a href='/h2-console' class='list-group-item list-group-item-action text-center'>h2-console</a>
+                                            <a href='/logout' class='list-group-item list-group-item-action text-center'>로그아웃</a>
+                                        </ul>
+                                        "
+                                    th:text="${session.user.email}" th:if="${session.user.email == 'admin'}">
+                            </div>
+                            <div class="pop" data-toggle="popover" title="" data-placement="bottom"
+                                 data-content="
+                                        <ul class='list-group'>
                                             <a href='/myPage' class='list-group-item list-group-item-action text-center'>마이페이지</a>
                                             <a href='/logout' class='list-group-item list-group-item-action text-center'>로그아웃</a>
                                         </ul>
                                         "
-                                    th:text="${session.user.email}">
-                                유저 정보
+                                 th:text="${session.user.email}" th:if="${session.user.email != 'admin'}">
                             </div>
                         </li>
                     </ul>
