--- a/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/common/header.html
+++ b/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/common/header.html
@@ -23,7 +23,7 @@
                                             <a href='/#' class='list-group-item list-group-item-action text-center'>회원 관리</a>
                                             <a href='/#' class='list-group-item list-group-item-action text-center'>게시물 관리</a>
                                             <a href='/h2-console' class='list-group-item list-group-item-action text-center'>h2-console</a>
-                                            <a href='/logout' class='list-group-item list-group-item-action text-center'>로그아웃</a>
+                                            <a href='/account/logout' class='list-group-item list-group-item-action text-center'>로그아웃</a>
                                         </ul>
                                         "
                                     th:text="${session.user.email}" th:if="${session.user.email == 'admin'}">
@@ -32,7 +32,7 @@
                                  data-content="
                                         <ul class='list-group'>
                                             <a href='/myPage' class='list-group-item list-group-item-action text-center'>마이페이지</a>
-                                            <a href='/logout' class='list-group-item list-group-item-action text-center'>로그아웃</a>
+                                            <a href='/account/logout' class='list-group-item list-group-item-action text-center'>로그아웃</a>
                                         </ul>
                                         "
                                  th:text="${session.user.email}" th:if="${session.user.email != 'admin'}">
