web 모듈 수정 - 회원 가입 및 비밀 번호 찾기 페이지 개발 시작 - 통합 테스트시 테스트 실패함. 테스트가 의존적인 것으로 보임. (수정 필요)

--- a/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/common/header.html
+++ b/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/common/header.html
@@ -13,7 +13,7 @@
                 <div class="text-right">
                     <ul class="list-inline my-2" th:if="${session.user == null}">
                         <li class="list-inline-item"><a class="text-dark" href="/account/login">로그인</a></li>
-                        <li class="list-inline-item"><a class="text-dark" href="/account/signUp">회원가입</a></li>
+                        <li class="list-inline-item"><a class="text-dark" href="/account/register">회원가입</a></li>
                     </ul>
                     <ul class="list-inline my-2" th:if="${session.user != null}">
                         <li class="list-inline-item">
