--- a/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/account/findPassword.html
+++ b/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/account/findPassword.html
@@ -1,1 +1,47 @@
-findPassword
+<!DOCTYPE html>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" charset="utf-8">
+    <title>Rowdy Story</title>
+</head>
+<body>
+    <div th:replace="common/header :: header"></div>
+
+    <section class="container section" style="margin-top: 120px;">
+        <div class="row">
+            <div class="col-8 mx-auto my-5 py-4 border">
+                <h5 class="ml-2"><strong>비밀번호 찾기</strong></h5>
+                <hr>
+
+                <div class="row">
+                    <div class="col-12">
+                        <form role="form" th:action="@{${findPassword}}" th:object="${findPasswordRequest}" method="post">
+                            <div class="form-row col-12">
+                                <label for="inputEmail"><strong>이메일 주소</strong></label>
+                                <div class="input-group mb-4">
+                                    <input type="text" th:field="*{email}" class="form-control" id="inputEmail" autocomplete="off" placeholder="가입하신 이메일을 입력해주세요.">
+                                    <div class="input-group-prepend">
+                                            <span class="input-group-text" id="addonEmail">
+                                                <svg class="bi bi-envelope" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                                  <path fill-rule="evenodd" d="M14 3H2a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM2 2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H2z"/>
+                                                  <path d="M.05 3.555C.017 3.698 0 3.847 0 4v.697l5.803 3.546L0 11.801V12c0 .306.069.596.192.856l6.57-4.027L8 9.586l1.239-.757 6.57 4.027c.122-.26.191-.55.191-.856v-.2l-5.803-3.557L16 4.697V4c0-.153-.017-.302-.05-.445L8 8.414.05 3.555z"/>
+                                                </svg>
+                                            </span>
+                                    </div>
+                                    <div id="alertEmail"></div>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-info float-right mr-3" id="sendEmailBtn" disabled>인증 메일 보내기</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div th:replace="common/footer :: bodyFooter"></div>
+    <script th:src="@{/custom/js/account/findPassword.js}"></script>
+
+</body>
+</html>
