--- a/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/account/login.html
+++ b/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/account/login.html
@@ -28,7 +28,7 @@
                         <div class="col-6">
                             <div class="mr-3 text-right">
                                 <ul class="list-inline">
-                                    <li class="list-inline-item"><a class="text-dark" th:href="@{${findPassword}}"><strong>비밀번호 찾기</strong></a></li>
+                                    <li class="list-inline-item"><a class="text-dark" th:href="@{${password}}"><strong>비밀번호 찾기</strong></a></li>
                                     <li class="list-inline-item"><a class="text-dark" th:href="@{${register}}"><strong>회원가입</strong></a></li>
                                 </ul>
                             </div>
