--- a/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/account/password.html
+++ b/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/account/password.html
@@ -16,7 +16,7 @@
 
                 <div class="row">
                     <div class="col-12">
-                        <form role="form" th:action="@{${findPassword}}" th:object="${findPasswordRequest}" method="post">
+                        <form role="form" th:action="@{${password}}" th:object="${passwordRequest}" method="post">
                             <div class="form-row col-12">
                                 <label for="inputEmail"><strong>이메일 주소</strong></label>
                                 <div class="input-group mb-4">
@@ -41,7 +41,7 @@
     </section>
 
     <div th:replace="common/footer :: bodyFooter"></div>
-    <script th:src="@{/custom/js/account/findPassword.js}"></script>
+    <script th:src="@{/custom/js/account/password.js}"></script>
 
 </body>
 </html>
