web, dto, data, domain 모듈 수정
web 모듈 수정 사항
- 회원 가입 기능 추가
- model 에 attribute 담는 방식 수정 (reflections 사용)
- 패키지 구조 변경

dto 모듈 변경 사항
- UserRegisterRequest picture 필드 삭제

data 모듈 변경 사항
- dto 모듈 변경에 따른 테스트 코드 수정

domain 모듈 변경 사항
- dto 모듈 변경에 따른 테스트 코드 수정
- User 도메인의 userEmail 에 인덱스 추가

--- a/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/account/password.html
+++ b/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/account/password.html
@@ -16,7 +16,7 @@
 
                 <div class="row">
                     <div class="col-12">
-                        <form role="form" th:action="@{${password}}" th:object="${passwordRequest}" method="post">
+                        <form role="form" th:action="@{${password_url}}" th:object="${password_object}" method="post">
                             <div class="form-row col-12">
                                 <label for="inputEmail"><strong>이메일 주소</strong></label>
                                 <div class="input-group mb-4">
