--- a/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/common/footer.html
+++ b/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/common/footer.html
@@ -22,4 +22,7 @@
     <script th:src="@{/bootstrap-4.5.3/js/bootstrap.bundle.min.js}"></script>
     <script th:src="@{/custom/js/common/popOverEvent.js}"></script>
     <script th:src="@{/custom/js/common/scrollEvent.js}"></script>
+    <script th:src="@{/custom/js/common/network.js}"></script>
+    <script th:src="@{/custom/js/common/api.js}"></script>
+    <script th:src="@{/custom/js/common/util.js}"></script>
 </footer>
