--- a/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/home.html
+++ b/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/home.html
@@ -6,17 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" charset="utf-8">
 
     <title>Rowdy Story</title>
-    <style>
-        section {
-            margin-top: 120px;
-        }
-        section a {
-            color: black;
-        }
-        section a:hover {
-            text-decoration: none;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" th:href="@{/custom/css/home.css}">
+
 </head>
 <body>
     <div th:replace="common/header :: header"></div>
