--- a/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/account/login.html
+++ b/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/account/login.html
@@ -10,12 +10,12 @@
 
     <section class="container" style="margin-top: 120px;">
 
-        <form role="form" th:action="@{${login}}" th:object="${loginRequest}" method="post">
+        <form role="form" th:action="@{${login_url}}" th:object="${login_object}" method="post">
 
             <div class="row">
-                <div class="col-8 mx-auto mt-5 alert alert-danger alert-dismissible fade show" role="alert" th:if="${loginError != null}">
-                    <div th:text="${loginError}">error message</div>
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close" th:onclick="'location.href=\'' + @{${login}} + '\''">
+                <div class="col-8 mx-auto mt-5 alert alert-danger alert-dismissible fade show" role="alert" th:if="${login_error_message != null}">
+                    <div th:text="${login_error_message}">error message</div>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close" th:onclick="'location.href=\'' + @{${login_url}} + '\''">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
@@ -28,8 +28,8 @@
                         <div class="col-6">
                             <div class="mr-3 text-right">
                                 <ul class="list-inline">
-                                    <li class="list-inline-item"><a class="text-dark" th:href="@{${password}}"><strong>비밀번호 찾기</strong></a></li>
-                                    <li class="list-inline-item"><a class="text-dark" th:href="@{${register}}"><strong>회원가입</strong></a></li>
+                                    <li class="list-inline-item"><a class="text-dark" th:href="@{${password_url}}"><strong>비밀번호 찾기</strong></a></li>
+                                    <li class="list-inline-item"><a class="text-dark" th:href="@{${register_url}}"><strong>회원가입</strong></a></li>
                                 </ul>
                             </div>
                         </div>
