--- a/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/account/register.html
+++ b/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/account/register.html
@@ -16,7 +16,7 @@
 
                 <div class="row">
                     <div class="col-12">
-                        <form role="form" th:action="@{${register}}" th:object="${registerRequest}" method="post">
+                        <form role="form" id="registerForm" th:action="@{${account_api}}" th:object="${register_object}" method="post" autocomplete="off">
                             <div class="form-row col-12">
                                 <label for="inputEmail"><strong>이메일 주소</strong></label>
                                 <div class="input-group">
@@ -34,9 +34,9 @@
                             </div>
                             <br>
                             <div class="form-row col-12">
-                                <label for="inputName"><strong>이름</strong></label>
+                                <label for="inputUserName"><strong>이름</strong></label>
                                 <div class="input-group">
-                                    <input type="text" th:field="*{userName}" class="form-control" id="inputName" autocomplete="off" placeholder="닉네임을 입력해주세요.">
+                                    <input type="text" th:field="*{userName}" class="form-control" id="inputUserName" autocomplete="off" placeholder="닉네임을 입력해주세요.">
                                     <div class="input-group-prepend">
                                             <span class="input-group-text" id="addonName">
                                                 <svg class="bi bi-person" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -88,6 +88,7 @@
 
     <div th:replace="common/footer :: footer"></div>
     <script th:src="@{/custom/js/account/register.js}"></script>
+    <script th:src="@{/custom/js/account/account.js}"></script>
 
 </body>
 </html>
