domain, dto, service, web 모듈 수정
domain 모듈 변경 사항
- RoleType 의 getRoleTypeFrom 메서드 호출시 파라미터가 유효하지 않으면 null 이 반환되도록 수정
- User 의 change 메서드 호출시 파라미터가 null 이라면 필드가 업데이트 되지 않도록 수정
- RoleType, User 변경에 따른 테스트 코드 수정

dto 모듈 변경 사항
- UserUpdateRequest 에 email 필드 추가

service 모듈 변경 사항
- AccountService 클래스에 changeEmail( String from, String to ) 메서드 추가
- AccountServiceTest 에 테스트 케이스 추가

web 모듈 변경 사항
- 마이페이지 화면 구성 완료 (info.html), 아직 완성은 아님
- 마이페이지에서 이메일 변경 기능 추가
- EmailDuplicateCheckControllerTest -> EmailControllerTest 로 이름 변경 및 테스트 케이스 추가

--- a/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/common/header.html
+++ b/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/common/header.html
@@ -20,9 +20,8 @@
                             <div class="pop" data-toggle="popover" title="" data-placement="bottom"
                                     data-content="
                                         <ul class='list-group'>
-                                            <a href='/#' class='list-group-item list-group-item-action text-center'>회원 관리</a>
-                                            <a href='/#' class='list-group-item list-group-item-action text-center'>게시물 관리</a>
                                             <a href='/h2-console' class='list-group-item list-group-item-action text-center'>h2-console</a>
+                                            <a href='/account/info' class='list-group-item list-group-item-action text-center'>내정보</a>
                                             <a href='/account/logout' class='list-group-item list-group-item-action text-center'>로그아웃</a>
                                         </ul>
                                         "
@@ -31,7 +30,7 @@
                             <div class="pop" data-toggle="popover" title="" data-placement="bottom"
                                  data-content="
                                         <ul class='list-group'>
-                                            <a href='/myPage' class='list-group-item list-group-item-action text-center'>마이페이지</a>
+                                            <a href='/account/info' class='list-group-item list-group-item-action text-center'>내정보</a>
                                             <a href='/account/logout' class='list-group-item list-group-item-action text-center'>로그아웃</a>
                                         </ul>
                                         "
