--- a/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/account/info.html
+++ b/RowdyStory/rowdystory-top/rowdystory-web/src/main/resources/templates/account/info.html
@@ -66,12 +66,12 @@
                                     <div class="input-group">
                                         <input type="text" class="form-control" id="inputEmail" autocomplete="off" th:value="${session.user.email}" readonly>
                                         <div class="input-group-prepend">
-                                        <span class="input-group-text" id="addonEmail">
-                                            <svg class="bi bi-envelope" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                              <path fill-rule="evenodd" d="M14 3H2a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM2 2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H2z"/>
-                                              <path d="M.05 3.555C.017 3.698 0 3.847 0 4v.697l5.803 3.546L0 11.801V12c0 .306.069.596.192.856l6.57-4.027L8 9.586l1.239-.757 6.57 4.027c.122-.26.191-.55.191-.856v-.2l-5.803-3.557L16 4.697V4c0-.153-.017-.302-.05-.445L8 8.414.05 3.555z"/>
-                                            </svg>
-                                        </span>
+                                            <span class="input-group-text" id="addonEmail">
+                                                <svg class="bi bi-envelope" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                                  <path fill-rule="evenodd" d="M14 3H2a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM2 2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H2z"/>
+                                                  <path d="M.05 3.555C.017 3.698 0 3.847 0 4v.697l5.803 3.546L0 11.801V12c0 .306.069.596.192.856l6.57-4.027L8 9.586l1.239-.757 6.57 4.027c.122-.26.191-.55.191-.856v-.2l-5.803-3.557L16 4.697V4c0-.153-.017-.302-.05-.445L8 8.414.05 3.555z"/>
+                                                </svg>
+                                            </span>
                                         </div>
                                         <div id="alertEmail"></div>
                                     </div>
@@ -106,15 +106,44 @@
                             <div class="col-12">
                                 <div class="form-row col-12">
                                     <div class="input-group">
-                                        <input type="password" class="form-control" id="inputPassword" autocomplete="off" placeholder="비밀번호는 최소 6자 이상입니다.">
+                                        <input type="password" class="form-control" id="prevPassword" autocomplete="off" placeholder="현재 비밀번호">
                                         <div class="input-group-prepend">
-                                            <span class="input-group-text" id="addonPassword">
+                                            <span class="input-group-text" id="addonPrevPassword">
+                                                <svg class="bi bi-envelope" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                                  <path fill-rule="evenodd" d="M14 3H2a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM2 2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H2z"/>
+                                                  <path d="M.05 3.555C.017 3.698 0 3.847 0 4v.697l5.803 3.546L0 11.801V12c0 .306.069.596.192.856l6.57-4.027L8 9.586l1.239-.757 6.57 4.027c.122-.26.191-.55.191-.856v-.2l-5.803-3.557L16 4.697V4c0-.153-.017-.302-.05-.445L8 8.414.05 3.555z"/>
+                                                </svg>
+                                            </span>
+                                        </div>
+                                        <div id="alertPrevPassword"></div>
+                                    </div>
+                                </div>
+                                <br>
+                                <div class="form-row col-12">
+                                    <div class="input-group">
+                                        <input type="password" class="form-control" id="newPassword" autocomplete="off" placeholder="새 비밀번호">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text" id="addonNewPassword">
                                                 <svg class="bi bi-lock" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                                     <path fill-rule="evenodd" d="M11.5 8h-7a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V9a1 1 0 0 0-1-1zm-7-1a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h7a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-7zm0-3a3.5 3.5 0 1 1 7 0v3h-1V4a2.5 2.5 0 0 0-5 0v3h-1V4z"/>
                                                 </svg>
                                             </span>
                                         </div>
-                                        <div id="alertPassword"></div>
+                                        <div id="alertNewPassword"></div>
+                                    </div>
+                                </div>
+                                <br>
+                                <div class="form-row col-12">
+                                    <div class="input-group">
+                                        <input type="password" class="form-control" id="newPasswordCheck" autocomplete="off" placeholder="비밀번호 확인">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text" id="addonNewPasswordCheck">
+                                                <svg class="bi bi-lock" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                                    <path fill-rule="evenodd" d="M11.5 8h-7a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V9a1 1 0 0 0-1-1zm-7-1a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h7a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-7zm0-3a3.5 3.5 0 1 1 7 0v3h-1V4a2.5 2.5 0 0 0-5 0v3h-1V4z"/>
+                                                </svg>
+                                            </span>
+                                        </div>
+                                        <div id="alertNewPasswordCheck"></div>
                                     </div>
                                 </div>
                             </div>
